<resources>
    <string name="app_name">Armazem Digital</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_imagem_cadastro_produto">Imagem do Produto Cadastrado</string>
    <string name="db_file_name">armazem_digital_db</string>
    <string name="dialog_button_ok">OK</string>
    <string name="info_made_by">Desenvolvido por Thiago Carvalho Füllenbach</string>
    <string name="info_title">Informações do Sistema</string>
    <string name="info_version">Versão do App: %s</string>
    <string name="label_btn_cadastro_categoria">Cadastro de Categorias</string>
    <string name="label_btn_cadastro_fornecedor">Cadastro de Fornecedores</string>
    <string name="label_btn_cadastro_produto">Cadastro de Produtos</string>
    <string name="label_btn_novo_cadastro_produto">Cadastrar Produto</string>
    <string name="label_btn_novo_cadastro_categoria">Cadastrar Categoria</string>
    <string name="n_f">N/F</string>
    <string name="title_item_menu_cadastro">Cadastros</string>
    <string name="title_item_menu_configuracao">Configurações</string>
    <string name="title_item_menu_estoque">Estoque</string>
    <string name="title_item_menu_movimentar">Movimentar</string>
    <string name="txt_exemplo_categoria_produto">Categoria Exemplo</string>
    <string name="txt_exemplo_descricao">Descrição de Exemplo</string>
    <string name="txt_exemplo_nome_produto">Produto de Exemplo</string>
    <string name="txt_exemplo_preco_produto">R$ 5,00</string>
    <string name="txt_sem_cadastro_produto">Não existem produtos cadastrados</string>
    <string name="txt_sem_cadastro_produto_estoque">Não existem produtos em estoque</string>
    <string name="txt_sem_cadastro_categoria">Não existem categorias cadastradas</string>
    <string name="hint_et_nome_produto">Nome do Produto</string>
    <string name="hint_et_descricao_produto">Descrição do Produto</string>
    <string name="hint_et_preco_produto">Preço do Produto</string>
    <string name="hint_actv_unidade_medida_produto">Unidade de Medida do Produto</string>
    <string name="hint_actv_categoria_produto">Categoria do Produto</string>
    <string name="hint_mactv_fornecedor_produto">Fornecedores do Produto</string>
    <string name="label_btn_cancelar_cadastro">Cancelar Cadastro</string>
    <string name="label_btn_salvar_cadastro">Salvar Cadastro</string>
    <string name="txt_exemplo_nome_categoria">Categoria de Exemplo</string>
    <string name="hint_et_nome_categoria">Nome da Categoria</string>
    <string name="hint_et_descricao_categoria">Descrição da Categoria</string>
    <string name="error_register_title">Erro ao Salvar cadastro</string>
    <string name="error_register_message">Verifique informações fornecidas.</string>
    <string name="error_save_message">Erro ao salvar dados de cadastro.</string>
    <string name="txt_qtd_produto">Nº de Produtos: %d</string>
    <string name="txt_exemplo_nome_fornecedor">Fornecedor de Exemplo</string>
    <string name="txt_sem_cadastro_fornecedor">Não existem fornecedores cadastrados</string>
    <string name="label_btn_novo_cadastro_fornecedor">Cadastrar Fornecedor</string>
    <string name="field_error">O Campo \'%s\' é obrigatório.</string>
    <string name="field_error_generic">Este Campo é obrigatório.</string>
    <string name="hint_et_nome_fornecedor">Nome do Fornecedor</string>
    <string name="hint_et_telefone_fornecedor">Telefone do Fornecedor</string>
    <string name="hint_et_email_fornecedor">E-mail do Fornecedor</string>
    <string name="hint_et_cep_fornecedor">CEP do Fornecedor</string>
    <string name="hint_et_estado_fornecedor">Estado do Fornecedor</string>
    <string name="hint_et_cidade_fornecedor">Cidade do Fornecedor</string>
    <string name="hint_et_bairro_fornecedor">Bairro do Fornecedor</string>
    <string name="hint_et_logradouro_fornecedor">Logradouro do Fornecedor</string>
    <string name="hint_et_numero_fornecedor">Número do Fornecedor</string>
    <string name="hint_et_complemento_fornecedor">Complemento do Fornecedor</string>
    <string name="placeholder_mactv_value">%s, </string>
    <string name="field_error_invalid_unit">Unidade de Medida inválida.</string>
    <string name="label_btn_selecionar_produto_categoria">Selecionar Categoria</string>
    <string name="label_btn_selecionar_produto_fornecedores">Selecionar Fornecedor(es)</string>
    <string name="error_select_title">Erro ao selecionar cadastro</string>
    <string name="error_select_category_message">Selecione uma categoria para continuar.</string>
    <string name="label_btn_confirmar_selecao">Confirmar Seleção</string>
    <string name="loading_saving_data_message">Aguarde enquanto os dados são salvos…</string>
    <string name="loading_saving_data_title">Salvando dados do(a) %s</string>
    <string name="registry_name_category">Categoria</string>
    <string name="registry_name_supplier">Fornecedor</string>
    <string name="registry_name_product">Produto</string>
    <string name="hint_actv_nivel_log">Nível de LOG</string>
    <string name="label_btn_extrair_log">Extrair LOG</string>
    <string name="error_already_generating_file">Aguarde enquanto o arquivo está sendo gerado.</string>
    <string name="msg_file_generation_success">Arquivo compactado com sucesso!</string>
    <string name="error_generating_zip_file">Erro ao compactar arquivos</string>
    <string name="label_btn_register_movement">Registrar Movimentações</string>
    <string name="label_btn_cancel_register_movimentacao">Cancelar Movimentações</string>
    <string name="txt_exemplo_quantidade_entrada">+ 10,000 kg</string>
    <string name="txt_exemplo_quantidade">10,000 kg</string>
    <string name="label_btn_new_cadastro">Adicionar Produto</string>
    <string name="label_btn_selecionar_movimentacao_produto">Selecionar Produto</string>
    <string name="hint_et_nome_operador">Nome do Operador</string>
    <string name="hint_et_quantidade_movimentada">Quantidade Movimentada</string>
    <string name="hint_actv_tipo_movimentacao">Tipo de Movimentação</string>
    <string name="hint_actv_motivo">Motivo</string>
    <string name="hint_et_observacao">Observação</string>
    <string name="txt_exemplo_sigla_unidade_medida">un.</string>
    <string name="error_save_no_movement_message">Sem movimentações para registro.</string>
    <string name="registry_name_movement">Movimentação</string>
    <string name="error_select_product_message">Selecione um produto para continuar.</string>
    <string name="placeholder_stock_in">+ %s %s</string>
    <string name="placeholder_stock_out">- %s %s</string>
    <string name="placeholder_stock_default">%s %s</string>
</resources>