<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.cadastros.fornecedor.ListagemFornecedorFragment">

    <ProgressBar
        android:id="@+id/pb_loading_list_fornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar_fornecedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/layer_list_custom_progress_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lista_cadastro_fornecedor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        tools:listitem="@layout/list_item_selectable_cadastro_fornecedor"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar_fornecedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_aviso_sem_fornecedor"
        style="@style/textoSemCadastros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sem_cadastro_fornecedor"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar_fornecedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_selecionar_fornecedores"
        style="@style/botaoCancelarCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_btn_confirmar_selecao"
        app:icon="@drawable/ic_select_confirm"
        app:iconTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar_fornecedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_cadastrar_fornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_btn_novo_cadastro_fornecedor"
        style="@style/botaoNovoCadastro"
        app:icon="@drawable/ic_cadastro_novo"
        app:iconTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>